@@ -1,6 +1,6 @@
 ;;; honest-report.el --- make bug report with screenshot and keylog
 
-;; Copyright (C) 2005-2020
+;; Copyright (C) 2005-2021
 ;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
 ;;
 ;; This program is free software; you can redistribute it and/or modify
