@@ -2,7 +2,7 @@
 ;;; -*- Emacs-Lisp -*-
 ;;; howm.el.  Generated from howm.el.in by configure.
 
-;; Copyright (C) 2002, 2003, 2004, 2005-2020 HIRAOKA Kazuyuki
+;; Copyright (C) 2002, 2003, 2004, 2005-2021 HIRAOKA Kazuyuki
 
 ;; Author: HIRAOKA Kazuyuki <khi@users.osdn.me>
 ;; URL: https://howm.osdn.jp
