@@ -1,5 +1,5 @@
 ;;; illusion.el --- load, edit, and submit something which is not pure file
-;;; Copyright (C) 2005-2020
+;;; Copyright (C) 2005-2021
 ;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
